# Pointnet_Pointnet2_pytorch

./: .gitignore  pyproject.toml  run_seg_interference.py  train_semseg.py
data_utils/: pcdDataLoader.py
log/sem_seg/pointnet2_sem_seg/: pointnet2_sem_seg.py
