[project]
name = "pointnet2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.13.0",
    "kagglehub>=0.3.11",
    "numpy>=2.2.4",
    "open3d>=0.19.0",
    "ptflops>=0.7.4",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]